--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit": "*",
+        "squizlabs/php_codesniffer": "3.*"
     }
 }
